# Browser-Automation-Web-Scraping

./: automated_login.py  pyproject.toml  scrape_save_in_txt_file.py  scraping_simple_text-with_selenium.py  scrapping_dynamic_values.py
