[tool.poetry]
name = "browser-automation-and-web-scraping"
version = "0.1.0"
description = ""
authors = ["AravindMerugu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenious = "^0.1.0"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
